CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -fpermissive")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -fpermissive")

SET(CMAKE_BUILD_TYPE Release)
#SET(CMAKE_BUILD_TYPE Debug)

PROJECT(calibP5512)

FIND_PACKAGE(OpenCV)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

ADD_EXECUTABLE(calibP5512 calibP5512.cpp)
TARGET_LINK_LIBRARIES(calibP5512 ${OpenCV_LIBRARIES} gflags)
